# MTG-App

./: pyproject.toml
data/: planeswalker.json
mtg_app/: controller.py  mtg_app.py
