[tool.poetry]
name = "mtg-app"
version = "0.1.0"
description = ""
authors = ["Mason Hamilton <Hamim949@hsd.k12.or.us>"]
readme = "README.md"
packages = [{include = "mtg_app"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
PyQt6 = "^6.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
